; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_action_with_wd_blocker.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_action_with_wd_blocker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@CHECKOUT_ACTION__NONE = common dso_local global i32 0, align 4
@GIT_CHECKOUT_NOTIFY_DIRTY = common dso_local global i32 0, align 4
@FORCE = common dso_local global i32 0, align 4
@REMOVE_AND_UPDATE = common dso_local global i32 0, align 4
@NONE = common dso_local global i32 0, align 4
@CONFLICT = common dso_local global i32 0, align 4
@REMOVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.TYPE_5__*, i32*)* @checkout_action_with_wd_blocker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_action_with_wd_blocker(i32* %0, i32* %1, %struct.TYPE_5__* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* @CHECKOUT_ACTION__NONE, align 4
  %10 = load i32*, i32** %5, align 8
  store i32 %9, i32* %10, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  switch i32 %13, label %44 [
    i32 128, label %14
    i32 132, label %26
    i32 130, label %26
    i32 131, label %32
    i32 129, label %38
  ]

14:                                               ; preds = %4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* @GIT_CHECKOUT_NOTIFY_DIRTY, align 4
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @checkout_notify(i32* %15, i32 %16, %struct.TYPE_5__* %17, i32* %18)
  %20 = call i32 @GIT_ERROR_CHECK_ERROR(i32 %19)
  %21 = load i32, i32* @FORCE, align 4
  %22 = load i32, i32* @REMOVE_AND_UPDATE, align 4
  %23 = load i32, i32* @NONE, align 4
  %24 = call i32 @CHECKOUT_ACTION_IF(i32 %21, i32 %22, i32 %23)
  %25 = load i32*, i32** %5, align 8
  store i32 %24, i32* %25, align 4
  br label %45

26:                                               ; preds = %4, %4
  %27 = load i32, i32* @FORCE, align 4
  %28 = load i32, i32* @REMOVE_AND_UPDATE, align 4
  %29 = load i32, i32* @CONFLICT, align 4
  %30 = call i32 @CHECKOUT_ACTION_IF(i32 %27, i32 %28, i32 %29)
  %31 = load i32*, i32** %5, align 8
  store i32 %30, i32* %31, align 4
  br label %45

32:                                               ; preds = %4
  %33 = load i32, i32* @FORCE, align 4
  %34 = load i32, i32* @REMOVE, align 4
  %35 = load i32, i32* @CONFLICT, align 4
  %36 = call i32 @CHECKOUT_ACTION_IF(i32 %33, i32 %34, i32 %35)
  %37 = load i32*, i32** %5, align 8
  store i32 %36, i32* %37, align 4
  br label %45

38:                                               ; preds = %4
  %39 = load i32, i32* @FORCE, align 4
  %40 = load i32, i32* @REMOVE_AND_UPDATE, align 4
  %41 = load i32, i32* @CONFLICT, align 4
  %42 = call i32 @CHECKOUT_ACTION_IF(i32 %39, i32 %40, i32 %41)
  %43 = load i32*, i32** %5, align 8
  store i32 %42, i32* %43, align 4
  br label %45

44:                                               ; preds = %4
  br label %45

45:                                               ; preds = %44, %38, %32, %26, %14
  %46 = load i32*, i32** %5, align 8
  %47 = load i32*, i32** %6, align 8
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %49 = load i32*, i32** %8, align 8
  %50 = call i32 @checkout_action_common(i32* %46, i32* %47, %struct.TYPE_5__* %48, i32* %49)
  ret i32 %50
}

declare dso_local i32 @GIT_ERROR_CHECK_ERROR(i32) #1

declare dso_local i32 @checkout_notify(i32*, i32, %struct.TYPE_5__*, i32*) #1

declare dso_local i32 @CHECKOUT_ACTION_IF(i32, i32, i32) #1

declare dso_local i32 @checkout_action_common(i32*, i32*, %struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
